[gd_scene load_steps=2 format=3 uid="uid://x0qah1ecl6l7"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_fpac0"]

[node name="Pause Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fpac0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -33.0
offset_right = 35.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Confirm" type="Label" parent="."]
visible = false
layout_mode = 2
offset_left = 1.0
offset_top = 71.0
offset_right = 107.0
offset_bottom = 97.0
scale = Vector2(0.652213, 0.652213)
text = "Are you Sure?"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 16.0
offset_top = 89.0
offset_right = 86.0
offset_bottom = 120.0
scale = Vector2(0.575, 0.575)
size_flags_horizontal = 4

[node name="Yes" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Yes"

[node name="No" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "No"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="HBoxContainer/No" to="." method="_on_no_pressed"]
